syntax = "proto3";
package api;

import "google/protobuf/empty.proto";

option go_package = "github.com/sivchari/chat-answer/proto";

service ChatService {
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse) {}
  rpc ListRoom(google.protobuf.Empty) returns (ListRoomResponse) {}
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty) {}
  rpc ListMessages(ListMessagesRequest) returns (stream ListMessagesResponse) {}
  rpc Chat(stream ChatRequest) returns (stream ChatResponse) {}
}

message CreateRoomRequest {
  string name = 1;
}

message CreateRoomResponse {
  string id = 1;
}

message ListRoomResponse {
  repeated Room rooms = 1;
}

message Room {
  string id = 1;
  string name = 2;
}

message SendMessageRequest {
  Message message = 1;
}

message Message {
  string roomId = 1;
  string text = 2;
}

message ListMessagesRequest {
  string roomId = 1;
}

message ListMessagesResponse {
  Message message = 1;
}

message ChatRequest {
  bool isJoin = 1;
  Message message = 2;
}

message ChatResponse {
  Message message = 1;
}
